--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ document.getElementById('loading-screen').classList.add('fade-out');
 
     // Função para redirecionar após o carregamento
     function redirectToLogin() {
-        window.location.href = "Login Inicial.html";
+        window.location.href = "Tela_intro.html";
     }
 
     // Simulação do carregamento (substitua por sua lógica real)
