--- a/CadastroLogin/Login.html
+++ b/CadastroLogin/Login.html
@@ -84,7 +84,7 @@
 </head>
 <body>
   <header>
-    <h1>Fallout Show</h1>
+    <h1>FalaShow</h1>
   </header>
   
   <div class="login-box">
@@ -95,6 +95,13 @@
     <div class="forgot-password">
       <a href="#" onclick="forgotPassword()">Esqueceu a senha?</a>
     </div>
+
+    <section>
+      <h2>Registre-se</h2>
+      <button class="cta-btn" onclick="window.location.href='cadastro.html'">CADASTRE-SE GRATUITAMENTE</button>
+
+      </form>
+    </section>
   </div>
 
   <script>
