--- a/Tela_intro.html
+++ b/Tela_intro.html
@@ -149,7 +149,7 @@
     <section class="cta">
         <h3>Pronto para começar?</h3>
         <p>Seu início transforma o futuro de uma criança.</p>
-        <button class="cta-btn" onclick="window.location.href='Login_Inicial.html'">ENTRE OU CRIE UMA CONTA</button>
+        <button class="cta-btn" onclick="window.location.href='/CadastroLogin/Login.html'">ENTRE OU CRIE UMA CONTA</button>
       </section>
     </main>
 
